adjusted surface Y check slightly, and various small refactors